<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/space_mono_bold"
        android:text="@string/title_profile"
        android:textColor="@color/dark_brown"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/adminCrown"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="invisible"
        android:background="@drawable/crown"
        app:layout_constraintBottom_toTopOf="@id/account_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_title">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/work_sans"
            android:hint="First name"
            android:inputType="textPersonName"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/text_input_background"
            android:fontFamily="@font/work_sans"
            android:hint="Last name"
            android:inputType="textPersonName"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/work_sans_bold"
        android:text="Account information"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/accountinfo_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/account_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Phone (optional)"
                android:textSize="14sp"
                android:textColor="@color/dark_brown"
                android:fontFamily="@font/work_sans_bold"/>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="123-456-7890"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:fontFamily="@font/work_sans"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/grey"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_yellow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Email"
                android:textSize="14sp"
                android:textColor="@color/dark_brown"
                android:fontFamily="@font/work_sans_bold"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="email@domain.com"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/work_sans"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/grey"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/accountinfo_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/settings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans_bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_yellow"/>

        <TextView
            android:id="@+id/account_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Account settings"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans_bold"
            />
        <TextView
            android:id="@+id/personal_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="Personal settings"
            android:textSize="15sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_yellow"/>

        <TextView
            android:id="@+id/notification_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="Notification settings"
            android:textSize="15sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans"
            android:background="?attr/selectableItemBackground"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_yellow"/>
        <TextView
            android:id="@+id/entrant_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="Entrant Settings"
            android:textSize="16sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans_bold"
            />
        <TextView
            android:id="@+id/row_how_to_use"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="How to use BeeThere"
            android:textSize="14sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans"
            android:background="?attr/selectableItemBackground"
            />

        <View
            android:id="@+id/admin_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:background="@color/light_yellow"/>
        <TextView
            android:id="@+id/admin_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="Admin Settings"
            android:textSize="16sp"
            android:visibility="invisible"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans_bold"
            />
        <TextView
            android:id="@+id/admin_dashboard"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="Admin Dashboard"
            android:textSize="14sp"
            android:textColor="@color/dark_brown"
            android:fontFamily="@font/work_sans"
            android:visibility="invisible"
            android:background="?attr/selectableItemBackground"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_save_profile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/work_sans_semibold"
        android:background="@drawable/button_dark_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>