<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/home_navigation"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_joined"
        android:icon="@drawable/calendar_navigation"
        android:title="@string/title_joined" />

    <item
        android:id="@+id/navigation_myEvents"
        android:icon="@drawable/create_navigation"
        android:title="@string/title_myEvents" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifications_navigation"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_navigation"
        android:title="@string/title_profile" />

</menu>